<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="459dp"
            android:layout_height="match_parent"
            android:layout_weight="8"
            android:orientation="vertical">

            <EditText
                android:id="@+id/editTextInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="8"
                android:ems="10"
                android:hint="@string/enterAmount"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/editTextInput2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="8"
                android:ems="10"
                android:hint="@string/enterPax"
                android:inputType="textPersonName" />

            <RadioGroup
                android:id="@+id/radioGroupGender"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/radioButtonGenderMale"
                        android:layout_width="110dp"
                        android:layout_height="wrap_content"
                        android:text="@string/rBtn1" />

                    <RadioButton
                        android:id="@+id/radioButtonGenderFemale"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/rBtn2" />
                </LinearLayout>

            </RadioGroup>

        </LinearLayout>

    </LinearLayout>

    <ToggleButton
        android:id="@+id/toggleButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="ToggleButton"
        android:textOff="@string/tgBtn2"
        android:textOn="@string/tgBtn1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/btnClick"
            android:layout_width="387dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/splitButton" />

        <Button
            android:id="@+id/btnClick2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/resetButton" />

    </LinearLayout>

    <TextView
        android:id="@+id/textViewDisplay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/textDisplay" />

</LinearLayout>